# SentimentPlatform-Open

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  dev-services.ps1  start-dev.ps1  stop-dev.ps1
sentiment_server/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
sentiment_server/apps/admin_panel/: models.py  services.py  tasks.py  training_constants.py  training_services.py  urls.py
sentiment_server/apps/admin_panel/api/: responses.py
sentiment_server/apps/admin_panel/application/: errors.py
sentiment_server/apps/admin_panel/domain/: errors.py
sentiment_server/apps/admin_panel/infra/: audit_logs.py
sentiment_server/apps/admin_panel/migrations/: 0001_initial.py  0002_initial.py  0003_alter_operationlog_action.py
sentiment_server/apps/analysis/: admin.py  apps.py  models.py  urls.py
sentiment_server/apps/analysis/api/: responses.py
sentiment_server/apps/analysis/application/: errors.py
sentiment_server/apps/analysis/domain/: access_rules.py  category_rules.py  date_rules.py  keyword_rules.py  review_rules.py
sentiment_server/apps/analysis/infra/: audit_logs.py  file_parsing.py  insights.py  model_runtime.py
sentiment_server/apps/analysis/migrations/: 0001_initial.py  0002_analysis_session_metadata.py  0003_analysis_result_review_metadata.py  0004_auto_training_dataset_tracking.py
sentiment_server/apps/reports/: models.py  tasks.py  urls.py
sentiment_server/apps/reports/api/: responses.py
sentiment_server/apps/reports/application/: errors.py  report_building.py  user_messages.py
sentiment_server/apps/reports/domain/: access_rules.py  artifact_rules.py  date_rules.py
sentiment_server/apps/reports/infra/: audit_logs.py  file_rendering.py  report_delivery.py  report_updates.py  templates.py
sentiment_server/apps/reports/migrations/: 0001_initial.py  0002_remove_report_reports_status_proc_start_and_more.py
sentiment_server/apps/users/: apps.py  authentication.py  captcha.py  default_avatar.py  jwt_views.py  locks.py  models.py  permissions.py  urls.py
sentiment_server/apps/users/api/: responses.py
sentiment_server/apps/users/application/: errors.py  shared.py
sentiment_server/apps/users/domain/: code_hashing.py  errors.py  jwt_cookies.py  password_policy.py  registration_roles.py  verification_rules.py
sentiment_server/apps/users/infra/: email_templates.py
sentiment_server/apps/users/migrations/: 0001_initial.py
sentiment_server/core/: __init__.py  email.py  masking.py  openapi.py  paths.py  request_ip.py  spreadsheet_safety.py
sentiment_server/ml_assets/data/: README.md
sentiment_server/ml_assets/models/: README.md
sentiment_server/ml_assets/scripts/: __init__.py
sentiment_server/ml_assets/scripts/data/: generate_test_data.py  split_dataset.py
sentiment_server/ml_assets/scripts/training/: __init__.py  compare_models.py  inspect_experiments.py  maintain_artifacts.py  operate_training.py  (+4 more)
sentiment_server/ml_assets/tests/: test_preprocessing.py
sentiment_server/ml_assets/workspace/: __init__.py
sentiment_server/scripts/dev/: clean-local-state.ps1
sentiment_server/scripts/ops/: backup_database.ps1
sentiment_server/sentiment_server/: asgi.py  celery.py  runtime_settings.py  urls.py  wsgi.py
sentiment_server/sentiment_server/settings/: __init__.py  base.py  local.py
sentiment_server/templates/emails/: auth_verification.html  auth_verification.txt
sentiment_server/tests/: conftest.py  test_admin_dashboard.py  test_admin_operation_logs.py  test_analysis.py  test_auth.py  test_auto_retrain.py  test_backup.py  test_history_trends.py  test_localized_downloads.py  test_model_activation.py  test_permissions.py  test_report_download.py  test_report_rendering.py  test_training_creation.py  test_training_deletion.py
(+250 files in other folders)
